[gd_scene load_steps=5 format=3 uid="uid://dhmhjnteijgtf"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_g4c26"]
[ext_resource type="PackedScene" uid="uid://d114yjxex2jl0" path="res://scenes/map_container.tscn" id="3_qdi1m"]
[ext_resource type="PackedScene" uid="uid://dbbpygbdbunoe" path="res://scenes/map.tscn" id="3_tih3v"]
[ext_resource type="PackedScene" uid="uid://cojvoa8j133qy" path="res://scenes/hud.tscn" id="3_va17m"]

[node name="Game" type="Node2D"]
script = ExtResource("1_g4c26")

[node name="HUD" parent="." instance=ExtResource("3_va17m")]

[node name="ParameterReloadTimer" type="Timer" parent="."]

[node name="Camera" type="Camera2D" parent="."]

[node name="MapContainer" parent="." instance=ExtResource("3_qdi1m")]
scale = Vector2(1.5, 1.5)
map = ExtResource("3_tih3v")

[connection signal="timeout" from="ParameterReloadTimer" to="." method="_on_timer_timeout"]
